--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 header {
   background: #dd4343;
-  color: rgba(182, 182, 21, 0.855);
+  color: rgba(000);
   padding: 20px;
   text-align: center;
 }
